--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ async function eventHandler(event) {
   const url = req.url
     // YourWorkersName.YourAccountName.修改为你的works地址
     // xxxxxxx改成任意一串字符，作为path，当做密码，不要公开
-  const target = url.replace("https://zonghewang.github.io/D1yYYcXzCmPOONvb0LQ/","")
+  const target = url.replace("https://zonghewang.github.io/D1yYYcXzCmPOONvb0LQ/?u=","")
   req.url = target;
   if(target.startsWith("http")){
     return new Response("500")
